--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,13 @@
     "my_number = None\n",
     "if number_50 > 100:\n",
     "    # if number_50 is greater than 100, assign the `my_number` variable to the number 100\n",
+    "    my_number = 100\n",
     "elif number_50 > 50:\n",
     "    # if number_50 is greater than 50, assign the `my_number` variable to the number 50\n",
+    "    my_number = 50\n",
     "else:\n",
-    "    # else assign the `my_number` variable to 0"
+    "    # else assign the `my_number` variable to 0\n",
+    "    my_number = 0"
    ]
   },
   {
@@ -45,13 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "if temperature < 81:\n",
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"\n",
+    "else:\n",
+    "    is_it_hot = \"It is so hot out!\""
    ]
   },
   {
@@ -64,13 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "days = (None, 'Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday')\n",
+    "# conditionals go here\n",
+    "day_of_the_week = days[today_is]"
    ]
   },
   {
@@ -89,7 +98,7 @@
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n"
    ]
   },
   {
@@ -118,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
