Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,8 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    "if \n"
+    "if sub_string in string:\n",
+    "    ends\n"
    ]
   },
   {
