--- a/index.ipynb
+++ b/index.ipynb
@@ -99,8 +99,7 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    "if sub_string in string:\n",
-    "    ends\n"
+    " sub_string in string\n"
    ]
   },
   {
