--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,8 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    " sub_string in string\n"
+    "ends_with = sub_string in string\n",
+    "end\n"
    ]
   },
   {
