Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,16 +91,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
     "ends_with = sub_string in string\n",
-    "end\n"
+    "ends_with\n",
+    "ends_with = "
    ]
   },
   {
