Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,8 @@
     "# conditionals go here\n",
     "ends_with = sub_string in string\n",
     "ends_with\n",
-    "ends_with = "
+    "ends_with = \"cool\" in \"school\"\n",
+    "en"
    ]
   },
   {
